# twitch_watchdog

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO  compose.yaml  main.py  notes.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  codeql.yml
docs/: srs.md
docs/diagrams/src/: c4-containers.puml  seq-add-streamer.puml  seq-follow-streamer.puml
frontend/: index.html  notes.md  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Bot.tsx  Navbar.tsx  NavbarLink.tsx
frontend/src/pages/: Bots.tsx  Home.tsx  Login.tsx  NotFound.tsx
src/: Dockerfile  config.py  main.py  requirements.txt  twitch.py  vk.py
src/watchdog/: __main__.py  config.py  fastapi.py
src/watchdog/core/: twitch.py  vk.py
src/watchdog/server/: api.py
tests/: test_api.py  test_config.py  test_main.py  test_twitch.py  test_vk.py
